<resources>
    <string name="app_name">atested</string>
    <string name="action_listado">Listado de Preguntas</string>
    <string name="action_configuracion">Configuracion</string>
    <string name="action_acercade">Acerca de</string>
    <string name="listado_provisional">Listado Provisional</string>
    <string name="title_activity_listado">Listado</string>
    <string name="title_activity_anyadir">AnyadirActivity</string>
    <string name="write_permission_denied">Permisos escritura denegados</string>
    <string name="write_permission_granted">Permisos escritura garantizados</string>
    <string name="write_permission_accepted">Permisos escritura aceptados</string>
    <string name="write_permission_not_accepted">Permisos escritura no aceptados</string>
    <string name="intro">\n</string>
    <string name="add_new_option">Añadir nueva opcion</string>
    <string name="your_option">Tu opción</string>
    <string name="add">añadir</string>
    <string name="cancel">cancelar</string>
    <string name="confirmacionBorrarPregunta">¿Está seguro de que desea eliminar la pregunta?</string>
    <string name="delete_pregunta">Borrar</string>
    <string name="AcercaDeTitulo">Aplicación desarrollada por Baltasar Jiménez Rincón</string>
    <string name="AnyadirEnunciado">Enunciado</string>
    <string name="AnyadirRespuestaCorrecta">Respuesta correcta</string>
    <string name="AnyadirRespuestaIncorrecta1">Respuesta Incorrecta 1</string>
    <string name="AnyadirRespuestaIncorrecta2">Respuesta Incorrecta 2</string>
    <string name="AnyadirRespuestaIncorrecta3">Respuesta Incorrecta 3</string>
    <string name="AnyadirGuardar">Guardar</string>
    <string name="AnyadirModCat">ModCat</string>
    <string name="noImplementado">No hay ninguna pregunta en el listado</string>
    <string name="preguntas_disponibles">Preguntas Disponibles:</string>
    <string name="categorias_disponibles">Categorias Disponibles:</string>
    <string name="cuestionarios_realizados">Cuestionarios Realizados:</string>
    <string name="calificaci_n_media">Calificación Media:</string>
    <string name="_0">0</string>
    <string name="AnyadirRespuestaIncorrecta">Respuesta Incorrecta</string>
    <string name="twitter" translatable="false">Twitter: @BaltaJmn</string>
    <string name="instagram" translatable="false">Instagram: @baltajmn75</string>
    <string name="strTomaFoto">Tomar Foto</string>
    <string name="from_gallery">Desde Galería</string>
    <string name="from_camera">Desde Cámara</string>
    <string name="error_files">No se ha podido hacer algo</string>
    <string name="choose_picture">Elegir Imagen</string>
    <string name="delete">Borrar</string>
    <string name="action_importar">Importar</string>
    <string name="action_exportar">Exportar</string>
    <string name="title_activity_acerca_de">AcercaDeActivity</string>

</resources>
