<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ResumenActivity"
    tools:showIn="@layout/activity_resumen"
    android:background="@color/fondo">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/enunciado1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="59dp"
                android:layout_marginBottom="10dp"
                android:text="@string/preguntas_disponibles"
                android:textColor="@color/fuente"
                app:layout_constraintBottom_toTopOf="@+id/enunciado2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/enunciado2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/categorias_disponibles"
                android:textColor="@color/fuente"
                app:layout_constraintBottom_toTopOf="@+id/enunciado3"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enunciado1" />

            <TextView
                android:id="@+id/enunciado3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/cuestionarios_realizados"
                android:textColor="@color/fuente"
                app:layout_constraintBottom_toTopOf="@+id/enunciado4"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enunciado2" />

            <TextView
                android:id="@+id/enunciado4"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginStart="14dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="348dp"
                android:text="@string/calificaci_n_media"
                android:textColor="@color/fuente"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/enunciado3" />

        </LinearLayout>

        <Space
            android:layout_width="25dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="58dp" />

            <TextView
                android:id="@+id/contador1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/fuente"
                tools:layout_editor_absoluteX="323dp"
                tools:layout_editor_absoluteY="59dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="21dp" />

            <TextView
                android:id="@+id/contador2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/fuente"
                tools:layout_editor_absoluteX="323dp"
                tools:layout_editor_absoluteY="79dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <TextView
                android:id="@+id/contador3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/fuente"
                tools:layout_editor_absoluteX="323dp"
                tools:layout_editor_absoluteY="105dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="19dp" />

            <TextView
                android:id="@+id/contador4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_0"
                android:textColor="@color/fuente"
                tools:layout_editor_absoluteX="323dp"
                tools:layout_editor_absoluteY="132dp" />

        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>