<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/anyadir"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".AnyadirEditarActivity"
    tools:showIn="@layout/activity_anyadir">

    <Spinner
        android:id="@+id/spinnerCategoria"
        android:layout_width="180dp"
        android:layout_height="25dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnunciado" />

    <EditText
        android:id="@+id/editTextEnunciado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="Enunciado"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editTextCorrecta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="Respuesta Correcta"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategoria"/>

    <EditText
        android:id="@+id/editTextIncorrecta1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="Respuesta Incorrecta"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCorrecta"/>

    <EditText
        android:id="@+id/editTextIncorrecta2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="Respuesta Incorrecta"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIncorrecta1"/>

    <EditText
        android:id="@+id/editTextIncorrecta3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="Respuesta Incorrecta"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextIncorrecta2"/>

    <Button
        android:id="@+id/buttonGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/AnyadirGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="74dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/AnyadirModCat"
        app:layout_constraintStart_toEndOf="@+id/spinnerCategoria"
        app:layout_constraintTop_toBottomOf="@+id/editTextEnunciado" />

    <Button
        android:id="@+id/buttonGallery"
        android:layout_width="214dp"
        android:layout_height="41dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="59dp"
        android:text="@string/from_gallery"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonCamera"
        android:layout_width="214dp"
        android:layout_height="38dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="4dp"
        android:text="@string/from_camera"
        app:layout_constraintBottom_toTopOf="@+id/buttonGallery"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="92dp"
        android:layout_height="90dp"
        android:layout_marginStart="60dp"
        android:layout_marginBottom="52dp"
        android:src="@drawable/icon_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>